<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBg"
    android:padding="10dp"
    tools:context="tz.co.xhcodes.com.RecordParcelActivity">
    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:background="#ccc"
        android:padding="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/parcelType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:padding="10dp"
            android:hint="@string/aina_ya_mzigo"
            />
        <EditText
            android:id="@+id/senderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:padding="10dp"
            android:hint="@string/jina_la_mtumaji"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/senderPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:padding="10dp"
            android:hint="@string/simu_ya_mtumaji"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/receiverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:padding="10dp"
            android:hint="@string/jina_la_mpokeaji"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/receiverPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:padding="10dp"
            android:hint="@string/simu_ya_mpokeaji"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/fromTowm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:padding="10dp"
            android:hint="@string/kutoka"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/toTown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:padding="10dp"
            android:hint="@string/kwenda"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/costPaid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:padding="10dp"
            android:hint="@string/gharama"
            android:inputType="numberDecimal"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:id="@+id/recordDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:padding="10dp"
            android:hint="@string/tarehe_ya_kusafirisha"
            android:inputType="date"
            android:layout_marginTop="10dp"
            />
        <Button
            android:layout_below="@+id/ticketNumberBox"
            android:id="@+id/hakiki_btn"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:textColor="#FFF"
            android:textAllCaps="false"
            android:text="@string/hifadhi"
            android:onClick="saveParcel"
            android:background="@color/cardview_dark_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
