<?xml version="1.0" encoding="utf-8"?>
<tz.co.xhcodes.com.CustomScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tz.co.xhcodes.com.PrintTicketActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textStyle="bold"
            android:padding="16dp"
            android:text="@string/sample_name"
            android:id="@+id/passangeNameView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:contentDescription="@string/na"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:src="@mipmap/iwachupay"
            android:id="@+id/busLogoImageView"
            android:layout_width="150dp"
            android:layout_height="150dp" />
        <Button
            android:id="@+id/print_btn"
            android:onClick="printTicket"
            android:textColor="#FFF"
            android:background="@color/colorMainBg"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:text="@string/print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</tz.co.xhcodes.com.CustomScrollView>
