<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    app:cardCornerRadius="0dp"
    android:padding="4dp"
    android:layout_marginBottom="10dp"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow android:layout_width="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:id="@+id/bus_name_view"
                    android:text="@string/iwachu_blue_coach"
                    />
            </TableRow>
            <TableRow android:layout_width="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:textStyle="normal"
                    android:id="@+id/mysafari_date_view"
                    android:text="@string/date_22_07_2017"
                    />
            </TableRow>
            <TableRow android:layout_width="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:textStyle="normal"
                    android:id="@+id/myticket_number_view"
                    android:text="@string/ticket_number_900900"
                    />
            </TableRow>
           <!-- <TableRow android:layout_width="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:textStyle="normal"
                    android:id="@+id/myseat_number_view"
                    android:text="Seat Number: A1"
                    />
            </TableRow>-->
            <TableRow android:layout_width="match_parent">
                <TextView
                    android:layout_weight="1"
                    android:textStyle="normal"
                    android:id="@+id/status_view"
                    android:text="@string/payment_unpaid_23_000"
                    />
            </TableRow>

        </TableLayout>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow android:layout_width="match_parent">
                <TextView
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_gravity="end"
                    android:textStyle="bold"
                    android:id="@+id/view_btn"
                    android:text="View"
                    android:padding="4dp"
                    android:textAlignment="center"
                    />
                <TextView
                    android:visibility="gone"
                    android:layout_weight="1"
                    android:layout_gravity="end"
                    android:textStyle="bold"
                    android:id="@+id/pay_btn"
                    android:text="@string/pay"
                    android:padding="4dp"
                    android:textAlignment="center"
                    />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
