<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tz.co.xhcodes.com.PayBillActivity"
    android:background="#431"
    >
    <TableRow
        android:id="@+id/row_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/namba_ya_taasisi"
            android:textColor="#FFF"
            android:textSize="14sp"
            />
    </TableRow>
    <TableRow
        android:id="@+id/row_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:inputType="number"
            android:id="@+id/client_number_box"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="#FFF"
            />
    </TableRow>
    <TableRow
        android:id="@+id/row_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/namba_ya_mteja"
            android:textColor="#FFF"
            android:textSize="14sp"
            />
    </TableRow>
    <TableRow
        android:id="@+id/row_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/reference_number_box"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="#FFF"
            android:inputType="text"
            />
    </TableRow>
    <TableRow
        android:id="@+id/row_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kiasi_alicholipa"
            android:textColor="#FFF"
            android:textSize="14sp"
            />
    </TableRow>
    <TableRow
        android:id="@+id/row_six"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:id="@+id/amount_paid_box"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="#FFF"
            android:inputType="numberDecimal"
            />
    </TableRow>
    <TableRow
        android:id="@+id/row_seven"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        >
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:textAllCaps="false"
            android:id="@+id/printReceipt"
            android:text="@string/print"
            android:onClick="printReceipt"
            />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:textAllCaps="false"
            android:id="@+id/payBillBtn"
            android:text="@string/tuma"
            android:onClick="processPayBill"
            />
    </TableRow>
</TableLayout>
